syntax = "proto3";

package grpc_api;
option go_package = "github.com/raonismaneoto/CustomDHT/commons/grpc_api";

service DHTNode {
  rpc Ping (Empty) returns (Empty) {}
  rpc Successor(Empty) returns (SuccessorResponse) {}
  rpc Predecessor(Empty) returns (PredecessorResponse) {}
  rpc HandleNewPredecessor (HandleNewPredecessorRequest) returns (HandleNewPredecessorResponse) {}
  rpc HandleNewSuccessor (HandleNewSuccessorRequest) returns (HandleNewSuccessorResponse) {}
  rpc Query (QueryRequest) returns (QueryResponse) {}
  rpc Save (SaveRequest) returns (Empty) {}
  rpc Delete (DeleteRequest) returns (Empty) {}
  rpc RepSave (RepSaveRequest) returns (Empty) {}
}

message Empty {

}

message SuccessorResponse {
    int64 id = 1;
    string endpoint = 2;
}

message PredecessorResponse {
    int64 id = 1;
    string endpoint = 2;
}

message HandleNewPredecessorRequest {
    int64 id = 1;
    string endpoint = 2;
}

message HandleNewPredecessorResponse {
    bool ok = 1;
}

message HandleNewSuccessorRequest {
    int64 id = 1;
    string endpoint = 2;
}

message HandleNewSuccessorResponse {
    bool ok = 1;
}

message QueryRequest {
    int64 key = 1;
}

message QueryResponse {
    bytes data = 1;
    int64 responsibleNodeId = 2;
    string responsibleNodeEndpoint = 3;
}

message RepSaveRequest {
    int64 key = 1;
    bytes value = 2;
}

message SaveRequest {
    int64 key = 1;
    bytes data = 2;
}

message DeleteRequest {
    int64 key = 1;
}
